# examples

./: .gitignore  README.md
base-balance/: Cargo.toml  README.md
base-balance/program/: Cargo.toml
base-balance/program/src/: main.rs
base-balance/script/: Cargo.toml
world-id-root/: Cargo.toml  README.md
world-id-root/program/: Cargo.toml
world-id-root/program/src/: main.rs
world-id-root/script/: Cargo.toml
