[workspace]
members = ["program", "script"]
resolver = "3"

[workspace.dependencies]
alloy-sol-types = "1.0.29"
alloy-primitives = { version = "1.3.1", default-features = false, features = ["serde"] }
tokio = { version = "1.39.0", default-features = false }

sp1-sdk = { version = "=5.2.2", default-features = false, features = ["network"] }
sp1-zkvm = { version = "=5.2.2" }
sp1-build = { version = "=5.2.2", default-features = false }

bankai-sdk = { git = "https://github.com/bankaixyz/bankai-sdk", tag = "v0.1.2.2" }
bankai-verify = { git = "https://github.com/bankaixyz/bankai-sdk", tag = "v0.1.2.2" }
bankai-types = { git = "https://github.com/bankaixyz/bankai-sdk", tag = "v0.1.2.2" }

# PLEASE DONT REMOVE THIS
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e", default-features = false, features = ["portable"] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e" }
