[package]
version = "0.1.0"
name = "base-balance-script"
edition = "2021"
default-run = "base-balance"

[[bin]]
name = "base-balance"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { workspace = true }
bankai-sdk = { workspace = true }
bankai-types = { workspace = true }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e", default-features = false, features = ["portable"] }


[build-dependencies]
sp1-build = { workspace = true }
