[package]
version = "0.1.0"
name = "world-id-script"
edition = "2021"
default-run = "world-id"

[[bin]]
name = "world-id"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
dotenv = "0.15.0"
bankai-sdk = { workspace = true }
bankai-types = { workspace = true }
tokio = { workspace = true }
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e", default-features = false, features = ["portable"] }

[build-dependencies]
sp1-build = { workspace = true }
